# baseconvert

./: Paths_baseconvert.hs  baseconvert.cabal
data/: bases.json
src/: Main.hs
src/BaseConvert/: Bases.hs  JSON.hs
